Scrollbar Chrome fix

--- a/src/sass/state/_mediaqueries.scss
+++ b/src/sass/state/_mediaqueries.scss
@@ -328,7 +328,7 @@
             min-height: 760px;
 
             .slideshow-section {
-                width: 100vw;
+                width: 100%;
                 height: calc(100% - 135.47px);
 
                 .mobile-slideshow {
